[gd_scene load_steps=8 format=3 uid="uid://b8a7wm3a02hhh"]

[ext_resource type="Texture2D" uid="uid://c7bvobm7kqnp7" path="res://icon.svg" id="1_4cjg5"]
[ext_resource type="Script" path="res://Scripts/pulley.gd" id="1_rtmnw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r67uu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crxyl"]
size = Vector2(18, 4)

[sub_resource type="Animation" id="Animation_st5of"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(66, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../pulleyblockleft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6k7u5"]
resource_name = "pulleymovement"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(66, -58), Vector2(66, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../pulleyblockleft:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -58)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sde7p"]
_data = {
"RESET": SubResource("Animation_st5of"),
"pulleymovement": SubResource("Animation_6k7u5")
}

[node name="Pulley" type="Node2D"]
position = Vector2(418, 280)
script = ExtResource("1_rtmnw")

[node name="pulleyblockright" type="AnimatableBody2D" parent="."]
position = Vector2(66, 0)
collision_layer = 3

[node name="Sprite2D" type="Sprite2D" parent="pulleyblockright"]
position = Vector2(-0.249996, 0)
scale = Vector2(0.160156, 0.15625)
texture = ExtResource("1_4cjg5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pulleyblockright"]
shape = SubResource("RectangleShape2D_r67uu")

[node name="Area2D" type="Area2D" parent="pulleyblockright"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pulleyblockright/Area2D"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_crxyl")

[node name="pulleyblockleft" type="AnimatableBody2D" parent="."]
collision_layer = 3

[node name="Sprite2D" type="Sprite2D" parent="pulleyblockleft"]
position = Vector2(-0.249996, 0)
scale = Vector2(0.160156, 0.15625)
texture = ExtResource("1_4cjg5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pulleyblockleft"]
shape = SubResource("RectangleShape2D_r67uu")

[node name="Area2D" type="Area2D" parent="pulleyblockleft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pulleyblockleft/Area2D"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_crxyl")

[node name="pulleymovement" type="AnimationPlayer" parent="."]
root_node = NodePath("../pulleyblockright")
libraries = {
"": SubResource("AnimationLibrary_sde7p")
}

[connection signal="body_entered" from="pulleyblockright/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="pulleyblockright/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="pulleymovement" to="." method="_on_pulleymovement_animation_finished"]
